<resources>
    <string name="app_name">MyGame</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button11">Button</string>
    <string name="textview">TextView</string>
    <string name="textview2"></string>
    <string name="textview3">TextView</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
    <string name="textview4"></string>
    <string name="textview5"></string>
    <string name="textview6"></string>
    <string name="submit2">Button</string>
    <string name="button7">Button</string>
    <string name="button8">Button</string>
    <string name="button9">Button</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="submit3">Button</string>
    <string name="Final">Congratulations</string>
    <string name="button10">Button</string>
    <string name="reset">Button</string>
    <string name="button12">Button</string>
    <string name="button14">reset</string>
    <string name="todo">TODO</string>
    <string name="finish">Finish</string>
    <string name="you_got_3_points">You got 3 points</string>
    <string name="button15">Button</string>
    <string name="button16">Button</string>
    <string name="button17">Button</string>
    <string name="button18">Button</string>
    <string name="TextViewTop">TextView17</string>

</resources>
